[gd_scene load_steps=15 format=2]

[ext_resource path="res://ExerciseSign.tscn" type="PackedScene" id=1]
[ext_resource path="res://position_sign.gd" type="Script" id=2]
[ext_resource path="res://audio/instruction_jump.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/instruction_now.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/instruction_squat.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/instruction_pushup.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/instruction_stand.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/instruction_crunch.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/instruction_burpee.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/instruction_sprint.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/instruction_weights.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/instruction_parcour.wav" type="AudioStream" id=12]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1.5, 0.2, 1.5 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0, 0.00784314, 0.458824, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="ExerciseSign" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0155925, 0 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.165942, 0, 0, 0, 1, 0, -0.0141001, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="player_squat" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0
bus = "Voice"

[node name="player_crunch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0
bus = "Voice"

[node name="player_stand" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Voice"

[node name="player_pushup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0
bus = "Voice"

[node name="player_parcour" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 5.0
bus = "Voice"

[node name="player_now" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
bus = "Voice"

[node name="player_jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
bus = "Voice"

[node name="player_burpee" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 5.0
bus = "Voice"

[node name="player_weights" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 5.0
bus = "Voice"

[node name="player_sprint" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 5.0
bus = "Voice"

[connection signal="finished" from="player_squat" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_crunch" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_stand" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_pushup" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_parcour" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_now" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_jump" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_burpee" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_weights" to="." method="_on_sfx_finished"]
[connection signal="finished" from="player_sprint" to="." method="_on_sfx_finished"]
